Adding support for the categories controller

--- a/README
+++ b/README
@@ -1,3 +1,10 @@
 Simply drop the VanillaSEO into your vanilla plugin's directory and enable in control panel.
 
 GUI interface is being worked up so that you can edit these configuratble items from the backend instead of silly "editing in the php file".
+
+Official support for this plugin: https://github.com/JamieChung/VanillaSEO
+
+Copyright
+Jamie Chung
+me@jamiechung.me
+http://www.jamiechung.me
