Adding more for the activity controller

--- a/README
+++ b/README
@@ -4,6 +4,12 @@ GUI interface is being worked up so that you can edit these configuratble items 
 
 Official support for this plugin: https://github.com/JamieChung/VanillaSEO
 
+TODO
+Paged Categories
+Paged Discussions /discussions/p2
+Paged Bookmarks
+Paged My Discussions
+
 Copyright
 Jamie Chung
 me@jamiechung.me
