Typo thanks to @ShaneShipson

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Simply drop the VanillaSEO into your vanilla plugin's directory and enable in control panel.
 
-GUI interface is being worked up so that you can edit these configuratble items from the backend instead of silly "editing in the php file".
+GUI interface is being worked up so that you can edit these configurable items from the backend instead of silly "editing in the php file".
 
 Official support for this plugin: https://github.com/JamieChung/VanillaSEO
 
